src/components/Event/style.css
.wrap {
  width: 100%;
  height: 100%;
  background: #000;
}
.mainBody {
  position: relative;
}
.registerTab,
.rulesTab,
.liveTab {
  display: none;
}
.mainBody>div {
  position: relative;
}
.register>.registerTab,
.rules>.rulesTab {
  display: block;
  position: relative;
  z-index: 5;
}
.live>.liveTab {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  align-self: center;
  font-size: 24px;
  display: block;
  position: absolute;
}
.rulesTab,
.registerTab {
  padding: 20px 30px;
  line-height: 32px;
}
.liveTab .txt {
  display: absolute;
  top: -33%;
  left: 0;
  width: 100%;
  height: 100%;
  vertical-align: middle;
  display: inline-block;
}
.stream {
  margin: 0 auto;
  max-width: 1137px;
}
.bgVideo {
  position: relative;
  top: 0;
  left: 0;
  margin: 0 auto;
  width: 100%;
  text-align: center;
}
.bgVideo iframe {
  opacity: 0.5;
}
.wrap-live .bgVideo iframe {
  opacity: 1;
}
.bgOverlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 10;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.wrap-init .home .status,
.wrap-init .home .dashboard {
  display: none;
}
.rules .dashboard,
.register .dashboard,
.rules .status,
.register .status {
  display: none;
}
@keyframes pulse1 {
  from { opacity: 0.7; }
  50% { opacity: 1; }
  to { opacity: 0.7; }
}
.bgOverlay .status,
.announcement {
  text-align: center;
  align-self: center;
  font-size: 24px;
}
.bgOverlay .statusLive {
  text-align: center;
  align-self: center;
  font-size: 40px;
  animation-name: pulse1;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
}
.bgOverlay .info {
  position: absolute;
  left: 30px;
  bottom: 20px;
  font-weight: 700;
  color: #eee;
  font-size: 26px;
  line-height: 44px;
  font-family: Palatino;
  z-index: 10;
  opacity: 0.9;
  text-align: left;
}
@keyframes dissolve {
  from { opacity: 1; background: #000; }
  90% { opacity: 1; background: #000; }
  to { opacity: 0.5; }
}
.bgOverlay .credit {
  position: absolute;
  right: 0;
  width: 100%;
  padding: 0 20px 0 0;
  bottom: 0px;
  height: 50px;
  line-height: 50px;
  background: transparent;
  color: #eee;
  text-align: right;
  animation-name: dissolve;
  animation-duration: 10s;
  animation-iteration-count: 1;
  opacity: 0.5;
  font-size: 15px;
}
.bgOverlay .credit a:link,
.bgOverlay .credit a:visited {
  text-decoration: none;
  color: #eee;
}
.bgOverlay .credit a:hover {
  text-decoration: underline;
}
.bgOverlay .location {
  font-family: Helvetica;
}
.mobileWrap .bgOverlay {
  position: static;
}
.mobileWrap .bgVideo {
  opacity: 1;
}
.mobileWrap .bgOverlay .status {
  position: absolute;
  width: 100%;
  top: 10px;
  z-index: 10;
}
.mobileWrap .bgOverlay .info {
  font-size: 15px;
  line-height: 20px;
  bottom: 10px;
  left: 20px;
}
.mobileWrap .bgOverlay .credit {
  bottom: 0;
  background: transparent;
  height: 20px;
  line-height: 20px;
  font-size: 13px;
  padding: 0 20px 0 0;
}
.loading,
.noData {
  font-size: 24px;
  font-weight: 100;
  letter-spacing: 2px;
  color: #fff;
  margin: 200px auto;
  text-align: center;
}
.noData {
  margin: 20px auto;
}
.info h2 {
  font-size: 16px;
  font-weight: 300;
  letter-spacing: 0.4px;
  margin: 0 0 3px 0;
  display: inline-block;
}
.managerList {
  position: relative;
  display: flex;
  flex-direction: row;
  padding: 0;
  color: #fff;
  font-size: 14px;
  border-top: 1px solid #555;
}
.managerList > div {
  position: relative;
  font-size: 0;
  vertical-align: top;
}
@keyframes pulse {
  from { opacity: 0.1; }
  50% { opacity: 1; }
  to { opacity: 0.1; }
}
.raceSelector {
  justify-content: center;
  display: flex;
  flex-wrap: wrap;
  margin: 5px 0 0 0;
}
.raceSelector .li,
.raceSelector .selected {
  position: relative;
  color: #fff;
  height: 28px;
  line-height: 28px;
  text-align: left;
  margin: 0;
  border-radius: 3px 3px 0 0;
  border: 1px solid transparent;
}
.raceSelector .selected {
  background: #aaa;
  border: 1px solid #555;
}
.raceSelector .li button,
.raceSelector .selected button {
  position: relative;
  margin: 0;
  padding: 0 8px;
  border: 0;
  font-size: 13px;
  text-indent: 0;
}
.init {
  display: inline-block;
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0);
  border-radius: 3px 3px 0 0;
}
.started {
  composes: init;
  animation-name: pulse;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  background: rgba(43, 171, 2, 0.7);
}
.ended {
  composes: init;
  background: rgba(165,124,9, 0.7);
}
.submitted {
  composes: init;
  background: rgba(37,99,17, 0.7);
}
.list {
  display: block;
  height: 100%;
  width: 100%;
  text-align: left;
  text-decoration: none;
  color: #fff;
  margin: 0 0 0 10px;
  padding: 0 40px 0 0;
  text-indent: 5px;
  border: 0;
  background: 0;
  border-bottom: 1px solid #ddd;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  position: relative;
  letter-spacing: 0.5px;
}
.listFt {
  position: absolute;
  bottom: 121px;
  background: rgba(66,66,66,0.2);
  width: 99.5%;
  height: 36px;
}
.form {
  max-width: 600px;
  margin: 0 auto;
}
.form h3 {
  margin: 0;
  text-align: center;
}
.form h4 {
  margin: 10px 0;
  font-weight: 300;
  text-align: center;
}
.right {
  float: right;
}
.dashItem {
  height: 32px;
  line-height: 32px;
  border-bottom: 1px solid #555;
}
.dashTable {
  background: 0;
  margin: 0;
  padding: 0;
  border: 0;
  flex-shrink: 0;
  color: #fff;
}
.dashId {
  border-bottom: 1px solid #555;
}
.dashTable thead {
  background: #333
}
.dashTable th,
.dashTable td {
  padding: 0 10px;
  height: 32px;
  border-left: 0;
  border-right: 1px solid #555;
  min-width: 50px;
  font-size: 13px;
  position: relative;
}
.dashTable th {
  height: 31px;
  white-space: nowrap;
  border-bottom: 1px solid #555;
  text-align: center;
}
.dashTable tbody tr:first-child {
  height: 33px;
}
.dashTable tbody tr {
  background: 0;
  height: auto;
  line-height: 0;
}
.dashTable .no {
  text-align: center;
  background: #333;
}
.dashTable .name {
  white-space: nowrap;
}
.dashTable .lap {
  font-size: 13px;
  text-align: center;
  color: #fff;
  font-family: Garamond, Times;
  padding: 0 6px;
}
.raceNumber {
  margin: 0 5px 0 0;
}
.scrollBox {
  overflow-x: scroll;
  overflow: auto;
  border-bottom: 1px solid #555;
  flex-grow: 1;
}
.scrollBox table {
  width: 100%;
}
.summary {
  border-bottom: 1px solid #555;
  background: #191919;
}
.summary .lap {
  padding: 0 10px;
  text-align: center;
}
.advTable {
  border-bottom: 1px solid #555;
  background: #191919;
}
.center {
  text-align: center;
}
.footer {
  padding: 30px 0;
  color: #fff;
  font-size: 11px;
  text-align :center;
}
@media only screen and (max-width : 700px) {
  .raceSelector .li button,
  .raceSelector .selected button {
     padding: 0 5px;
    font-size: 13px;
  }
  .dashId th:first-child,
  .dashId td:first-child {
    padding: 0 5px;
    min-width: 20px;
  }
  .advTable th:last-child,
  .advTable td:last-child {
    padding: 0 8px;
    min-width: 20px;
  }
  .rulesTab {
    padding: 15px 20px;
  }
  .bgOverlay .status,
  .announcement {
    font-size: 18px;
  }
}

